# Amplify-Dashboard-Juyoung

./: .gitattributes  .gitignore  .npmrc  app.py  config.py  pnpm-lock.yaml  pyproject.toml  replit.md  start_amplify.sh
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--DOCTYPE-html-html-head-meta-charset-utf-8-meta-name-vi_1777582370831.txt  Pasted--DOCTYPE-html-html-head-meta-charset-utf-8-meta-name-vi_1777582462074.txt  Pasted--Each-feature-card-has-TWO-states-collapsed-default-and_1775062131350.txt  Pasted--External-Libraries-import-React-from-react-Components-_1779086536161.txt  Pasted--p-style-margin-0-0-12px-0-color-333333-font-size-15px-_1777556625357.txt  Pasted-2026-04-15-21-15-25-54-f579340e-User-level-30-time-1776_1776308316178.txt  Pasted-2026-04-20-20-11-58-76-e2f0bd9b-User-level-30-time-1776_1776730533814.txt  Pasted-Add-a-feedback-loop-system-that-learns-from-marketer-ed_1774985499942.txt  Pasted-Add-in-app-announcement-publishing-This-creates-an-API-_1775158013321.txt  Pasted-Add-screenshot-image-support-to-the-channel-content-car_1775146183313.txt  Pasted-Add-the-ability-for-the-marketer-to-manually-override-t_1775062395984.txt  Pasted-Add-the-ability-for-the-marketer-to-manually-override-t_1775063158124.txt  Pasted-Create-a-new-file-ai-pre-filter-py-that-does-a-quick-ke_1774991377316.txt  Pasted-Create-a-route-GET-api-docs-that-returns-an-HTML-page-n_1774986277381.txt  Pasted-Create-a-temporary-test-page-at-GET-test-review-that-se_1774987984808.txt  Pasted-Final-core-prompt-Add-clipboard-publishing-for-remainin_1775159190070.txt  (+39 more)
(+314 files in other folders)
