[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "asana>=5.2.3",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "resend>=2.28.1",
    "sendgrid>=6.12.5",
    "slack-sdk>=3.41.0",
    "tweepy>=4.16.0",
    "waitress>=3.0.2",
]
